--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gulp-newer": "^1.0.0",
     "gulp-sass": "^2.0.0",
     "gulp-size": "^2.0.0",
-    "gulp-sourcemaps": "^1.3.0",
+    "gulp-sourcemaps": "2.4.1",
     "gulp-uglify": "^1.0.1",
     "gulp-useref": "^3.0.0",
     "psi": "^2.0.2",
