allow blocks on sections

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -4,14 +4,12 @@ After:
   - 'framework/*'
   - 'cms/*'
 ---
-# YAML configuration for SilverStripe
-# See http://doc.silverstripe.org/framework/en/topics/configuration
-# Caution: Indentation through two spaces, not tabs
-SSViewer:
-  theme: 'simple'
 Member:
   extensions:
     - MemberExtension
 SiteConfig:
   extensions:
     - SiteConfigExtension
+ReportSection:
+  extensions:
+    - BlocksSiteTreeExtension
