--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
 		"silverstripe-themes/simple": "3.1.*",
 		"silverstripe/blog" : "2.*@stable",
 		"silverstripe/activedirectory": "3.*",
-		"studiobonito/silverstripe-typekit" : "*"
+		"studiobonito/silverstripe-typekit" : "*",
+		"sheadawson/silverstripe-blocks": "1.1.1",
+		"silverstripe-australia/gridfieldextensions":"1.4.*"
 
 	},
    "repositories":[  
