--- a/mysite/_config/blocks.yml
+++ b/mysite/_config/blocks.yml
@@ -9,7 +9,7 @@ BlockManager:
               AfterContentConstrained: true
               AfterContent: true
               Footer: true # a Footer area will be available on all page types in simple theme
-
+          use_blocksets: false
             #use_blocksets: false # Whether to use BlockSet functionality (default if undeclared: true)
             #use_extra_css_classes: true # Whether to allow cms users to add extra css classes to blocks (default if undeclared: false)
             #prefix_default_css_classes: 'myprefix--' # prefix the automatically generated CSSClasses based on class name (default if undeclared: false)
