--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
 		"studiobonito/silverstripe-typekit" : "*",
 		"sheadawson/silverstripe-blocks": "1.1.1",
 		"silverstripe-australia/gridfieldextensions":"1.4.*",
-		"md/uiowa-bar": "*"
+		"nathancox/codeeditorfield" : "1.3.*",
+		"md/uiowa-bar": "*",
+		"unclecheese/display-logic" : "*",
+		"jonom/focuspoint":"2.4.*"
 
 	},
    "repositories":[  
