--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
 	"description": "The SilverStripe Framework Installer",
 	"require": {
 		"php": ">=5.3.3",
-		"silverstripe/cms": "3.5.*@stable",
-		"silverstripe/framework": "3.5.*@stable",
-		"silverstripe/reports": "3.5.*@stable",
-		"silverstripe/siteconfig": "3.5.*@stable",
+		"silverstripe/cms": "3.6.*@stable",
+		"silverstripe/framework": "3.6.*@stable",
+		"silverstripe/reports": "3.6.*@stable",
+		"silverstripe/siteconfig": "3.6.*@stable",
 		"silverstripe-themes/simple": "3.1.*",
 		"silverstripe/blog" : "2.*@stable",
 		"silverstripe/activedirectory": "3.*",
@@ -16,7 +16,8 @@
 		"nathancox/codeeditorfield" : "1.3.*",
 		"md/uiowa-bar": "*",
 		"unclecheese/display-logic" : "*",
-		"jonom/focuspoint":"2.4.*"
+		"jonom/focuspoint":"2.4.*",
+		"unclecheese/bootstrap-forms" : "1.2.0"
 
 	},
    "repositories":[  
