--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
 		"md/uiowa-bar": "*",
 		"unclecheese/display-logic" : "*",
 		"jonom/focuspoint":"2.4.*",
-		"unclecheese/bootstrap-forms" : "1.2.0"
+		"unclecheese/bootstrap-forms" : "1.2.0",
+		"silverstripe-rebelalliance/youtubefield" : "*",
+		"unclecheese/betterbuttons": "1.3.*"
 
 	},
    "repositories":[  
