--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -16,3 +16,6 @@ ReportSection:
 Block:
   extensions:
     - BlockExtension
+LeftAndMain:
+  extra_requirements_css:
+    - themes/division-reports/dist/css/cms.css
