--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
       }
    ],
 	"require-dev": {
-		"phpunit/PHPUnit": "~3.7@stable"
+		"phpunit/PHPUnit": "~3.7@stable",
+		"lekoala/silverstripe-debugbar": "^1.0"
 	},
 	"extra": {
 		"branch-alias": {
