--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
 		"silverstripe-australia/gridfieldextensions":"1.4.*",
 		"nathancox/codeeditorfield" : "1.3.*",
 		"md/uiowa-bar": "*",
+		"md/division-analytics": "1.*",
 		"unclecheese/display-logic" : "*",
 		"jonom/focuspoint":"2.4.*",
 		"unclecheese/bootstrap-forms" : "1.2.0",
@@ -26,6 +27,10 @@
       {
          "type": "vcs",
          "url": "https://github.com/StudentLifeMarketingAndDesign/silverstripe-activedirectory"
+      },
+      {
+         "type": "vcs",
+         "url": "https://github.com/StudentLifeMarketingAndDesign/division-analytics"
       },
       {
          "type": "vcs",
