--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		"jonom/focuspoint":"2.4.*",
 		"unclecheese/bootstrap-forms" : "1.2.0",
 		"silverstripe-rebelalliance/youtubefield" : "*",
-		"unclecheese/betterbuttons": "1.3.*"
+		"unclecheese/betterbuttons": "1.3.*",
+		"jonom/silverstripe-betternavigator" : "*"
 
 	},
    "repositories":[  
