--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 		"unclecheese/bootstrap-forms" : "1.2.0",
 		"silverstripe-rebelalliance/youtubefield" : "*",
 		"unclecheese/betterbuttons": "1.3.*",
-		"jonom/silverstripe-betternavigator" : "*"
+		"jonom/silverstripe-betternavigator" : "*",
+		"bummzack/sortablefile" : "*"
 
 	},
    "repositories":[  
